--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       Dropdown <span class="caret"></span>
     </a>
     <ul class="dropdown-menu">
-      ...
+      <li> test </li>
     </ul>
   </li>
-  ...
+ test
 </ul>
 </html>
